fixed issue with color not appearing on mobile

--- a/less/style.less
+++ b/less/style.less
@@ -10,7 +10,6 @@ body {
     width: 100%;
     height: 100%;
     font-family: "Open Sans","Helvetica Neue", Helvetica, Arial, sans-serif;
-    background-color: @blue;
 }
 
 html {
@@ -39,11 +38,17 @@ p {
     line-height: 1.5;
 }
 
-@media(min-width:767px) {
+@media(min-width:768px) {
     p {
         margin: 0 0 35px;
         font-size: 20px;
         line-height: 1.6;
+    }
+}
+
+@media(max-width: 767px) {
+    body {
+        background-color: @blue;
     }
 }
 
@@ -106,7 +111,7 @@ a:focus {
     outline: none;
 }
 
-@media(min-width:767px) {
+@media(min-width:768px) {
     .navbar {
         padding: 20px 0;
         border-bottom: none;
@@ -134,6 +139,7 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: @light;
+    background-color: @blue;
     background-size: cover;
 }
 
@@ -146,7 +152,7 @@ a:focus {
     font-size: 18px;
 }
 
-@media(min-width:767px) {
+@media(min-width:768px) {
     .intro {
         height: 100%;
         padding: 0;
@@ -172,7 +178,7 @@ a:focus {
     margin-top: 100px;
 }
 
-@media(min-width:767px) {
+@media(min-width:768px) {
     .content-section {
         padding-top: 250px;
     }
@@ -226,7 +232,7 @@ a:focus {
     }
 }
 
-@media(max-width:767px) {
+@media(max-width:768px) {
     ul.banner-social-buttons > li {
         display: block;
         margin-bottom: 20px;
